<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:isVisible="@{isLoading}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/shammer_color"
            android:paddingVertical="@dimen/spacing_small">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_movie"
                android:layout_width="@dimen/media_card_popular_movie"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:background="@color/shammer_color"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1.75:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />


            <TextView
                android:id="@+id/text_movie_title"
                style="@style/SemiBold.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:elevation="2dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxWidth="240dp"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/spacing_medium"
                android:textColor="@color/white_primary"
                app:layout_constraintBottom_toTopOf="@+id/text_category"
                app:layout_constraintStart_toStartOf="@+id/image_movie"
                tools:text="hello" />

            <TextView
                android:id="@+id/text_rate"
                style="@style/SemiBold.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_small"
                android:elevation="2dp"
                android:gravity="start|center"
                android:textColor="@color/yellow"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_movie_title"
                app:layout_constraintStart_toEndOf="@+id/text_movie_title" />

            <TextView
                android:id="@+id/text_category"
                style="@style/SemiBold.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_small"
                android:elevation="2dp"
                android:gravity="start"
                android:textColor="@color/white_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_movie_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_small"
            android:background="@color/shammer_color"
            android:padding="@dimen/spacing_too_small">

            <TextView
                android:id="@+id/text_tvShow_title"
                style="@style/SemiBold.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="@string/tv_shows"
                android:textColor="@color/shammer_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_top_rated"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_medium"
                android:background="@color/shammer_color"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/image_popular"
                app:layout_constraintEnd_toStartOf="@+id/image_latest"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_latest"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@+id/image_top_rated"
                app:layout_constraintEnd_toEndOf="@id/image_top_rated"
                app:layout_constraintStart_toStartOf="@id/image_top_rated"
                app:layout_constraintTop_toTopOf="@id/image_top_rated"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

            <TextView
                android:id="@+id/text_top_rated"
                style="@style/SemiBold.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:elevation="2dp"
                android:text="@string/top_rated"
                android:textColor="@color/shammer_color"
                app:layout_constraintBottom_toBottomOf="@+id/image_top_rated"
                app:layout_constraintStart_toStartOf="@+id/image_top_rated" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_latest"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/shammer_color"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/image_top_rated"
                app:layout_constraintTop_toBottomOf="@+id/text_tvShow_title"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@+id/image_latest"
                app:layout_constraintEnd_toEndOf="@id/image_latest"
                app:layout_constraintStart_toStartOf="@id/image_latest"
                app:layout_constraintTop_toTopOf="@id/image_latest"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

            <TextView
                android:id="@+id/text_latest"
                style="@style/Regular.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:elevation="2dp"
                android:text="@string/latest"
                android:textColor="@color/shammer_color"
                app:layout_constraintBottom_toBottomOf="@+id/image_latest"
                app:layout_constraintStart_toStartOf="@+id/image_latest" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_popular"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:background="@color/shammer_color"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/image_latest"
                app:layout_constraintStart_toStartOf="@+id/image_latest"
                app:layout_constraintTop_toBottomOf="@+id/image_latest"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="@+id/image_popular"
                app:layout_constraintEnd_toEndOf="@id/image_popular"
                app:layout_constraintStart_toStartOf="@id/image_popular"
                app:layout_constraintTop_toTopOf="@id/image_popular"
                app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

            <TextView
                android:id="@+id/text_popular"
                style="@style/Regular.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:elevation="2dp"
                android:text="@string/popular"
                android:textColor="@color/shammer_color"
                app:layout_constraintBottom_toBottomOf="@+id/image_popular"
                app:layout_constraintStart_toStartOf="@+id/image_popular" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="@color/shammer_color"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/image_popular"
            app:layout_constraintEnd_toStartOf="@+id/image_latest"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toTopOf="@+id/image_latest"
            app:shapeAppearanceOverlay="@style/CardCorners.Medium" />

    </LinearLayout>

</layout>
